--- a/index.ipynb
+++ b/index.ipynb
@@ -45,12 +45,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Animal(object):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        self.name = name\n",
+    "        self.weight = weight\n",
+    "        self.size = None\n",
+    "        self.species = None\n",
+    "        self.foodtype = None\n",
+    "        self.nocturnal = False\n",
+    "        \n",
+    "    def sleep(self, nocturnal):\n",
+    "        if self.nocturnal:\n",
+    "            print(\"{} sleeps during the day\".format(self.name))\n",
+    "        else:\n",
+    "            print(\"{} sleeps at night\".format(self.name))\n",
+    "    \n",
+    "    def eat(self, food):\n",
+    "        if self.foodtype == 'omnivore':\n",
+    "            print(\"{} the {}, thinks {} is good food\".format(self.name, self.species, food ))\n",
+    "        elif (food == 'meat' and self.foodtype == 'carnivore') or (food == 'plants' and self.foodtype == 'omnivore')\n",
+    "            \n",
+    "        "
    ]
   },
   {
@@ -294,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
