--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,7 @@
     "    def eat(self, food):\n",
     "        if self.foodtype == 'omnivore':\n",
     "            print(\"{} the {}, thinks {} is good food\".format(self.name, self.species, food ))\n",
-    "        elif (food == 'meat' and self.foodtype == 'carnivore') or (food == 'plants' and self.foodtype == 'omnivore')\n",
+    "        elif (food == 'meat' and self.foodtype == 'carnivore') or (food == 'plants' and self.foodtype == 'omnivore'):\n",
     "            \n",
     "        "
    ]
