Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -68,6 +68,7 @@
     "        if self.foodtype == 'omnivore':\n",
     "            print(\"{} the {}, thinks {} is good food\".format(self.name, self.species, food ))\n",
     "        elif (food == 'meat' and self.foodtype == 'carnivore') or (food == 'plants' and self.foodtype == 'omnivore'):\n",
+    "            print(\"{} \")\n",
     "            \n",
     "        "
    ]
