Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -66,9 +66,9 @@
     "    \n",
     "    def eat(self, food):\n",
     "        if self.foodtype == 'omnivore':\n",
-    "            print(\"{} the {}, thinks {} is good food\".format(self.name, self.species, food ))\n",
+    "            print(\"{}, the {}, thinks {} is good food\".format(self.name, self.species, food ))\n",
     "        elif (food == 'meat' and self.foodtype == 'carnivore') or (food == 'plants' and self.foodtype == 'omnivore'):\n",
-    "            print(\"{} the {}, th\")\n",
+    "            print(\"{}, the {}, thinks {}\")\n",
     "            \n",
     "        "
    ]
