--- a/index.ipynb
+++ b/index.ipynb
@@ -69,7 +69,8 @@
     "            print(\"{}, the {}, thinks {} is good food\".format(self.name, self.species, food ))\n",
     "        elif (food == 'meat' and self.foodtype == 'carnivore') or (food == 'plants' and self.foodtype == 'omnivore'):\n",
     "            print(\"{}, the {}, thinks {} is Yammy\".format(self.name, self.species, food))\n",
-    "        e\n",
+    "        else:\n",
+    "            print(\"\")\n",
     "            \n",
     "        "
    ]
