--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,7 @@
     "        elif (food == 'meat' and self.foodtype == 'carnivore') or (food == 'plants' and self.foodtype == 'omnivore'):\n",
     "            print(\"{}, the {}, thinks {} is Yammy\".format(self.name, self.species, food))\n",
     "        else:\n",
-    "            print(\"\")\n",
+    "            print(\"I don't eat this\")\n",
     "            \n",
     "        "
    ]
