Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "class Elephant(Animal):\n",
-    "    def "
+    "    def __init__(self, )"
    ]
   },
   {
