--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,8 @@
    "outputs": [],
    "source": [
     "class Elephant(Animal):\n",
-    "    def __init__(self, name , )"
+    "    def __init__(self, name, weight):\n",
+    "        self.name ="
    ]
   },
   {
