Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,7 +100,8 @@
    "source": [
     "class Elephant(Animal):\n",
     "    def __init__(self, name, weight):\n",
-    "        self.name ="
+    "        self.name = name\n",
+    "        self.weight = weight"
    ]
   },
   {
