--- a/index.ipynb
+++ b/index.ipynb
@@ -100,6 +100,7 @@
    "source": [
     "class Elephant(Animal):\n",
     "    def __init__(self, name, weight):\n",
+    "        super__init__\n",
     "        self.name = name\n",
     "        self.weight = weight"
    ]
