Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -101,7 +101,7 @@
     "class Elephant(Animal):\n",
     "    def __init__(self, name, weight):\n",
     "        super__init__(name, weight)\n",
-    "        self.name = name\n",
+    "        self.size = 'enormo'\n",
     "        self.weight = weight"
    ]
   },
