--- a/index.ipynb
+++ b/index.ipynb
@@ -101,8 +101,8 @@
     "class Elephant(Animal):\n",
     "    def __init__(self, name, weight):\n",
     "        super__init__(name, weight)\n",
-    "        self.size = 'enormo'\n",
-    "        self.weight = weight"
+    "        self.size = 'enormous'\n",
+    "        self.sp = weight"
    ]
   },
   {
