Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
     "    def __init__(self, name, weight):\n",
     "        super__init__(name, weight)\n",
     "        self.size = 'enormous'\n",
-    "        self.sp = weight"
+    "        self.species = "
    ]
   },
   {
