Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,8 @@
     "        super__init__(name, weight)\n",
     "        self.size = 'enormous'\n",
     "        self.species = 'elephant'\n",
-    "        self.foodtype = ''"
+    "        self.foodtype = 'herbivore'\n",
+    "        "
    ]
   },
   {
