Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
     "        self.size = 'enormous'\n",
     "        self.species = 'elephant'\n",
     "        self.foodtype = 'herbivore'\n",
-    "        self.nocturnal"
+    "        self.nocturnal = False "
    ]
   },
   {
