--- a/index.ipynb
+++ b/index.ipynb
@@ -100,7 +100,7 @@
    "source": [
     "class Elephant(Animal):\n",
     "    def __init__(self, name, weight):\n",
-    "        super().__init__ __init_(name, weight)\n",
+    "        super().__init__(name, weight)\n",
     "        self.size = 'enormous'\n",
     "        self.species = 'elephant'\n",
     "        self.foodtype = 'herbivore'\n",
