--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -127,8 +127,7 @@
    "outputs": [],
    "source": [
     "class Tiger(Animal):\n",
-    "    def __init__(self, name, weight):\n",
-    "        "
+    "    def __init"
    ]
   },
   {
