--- a/index.ipynb
+++ b/index.ipynb
@@ -128,7 +128,8 @@
    "source": [
     "class Tiger(Animal):\n",
     "    def __init__(self, name, weight):\n",
-    "        "
+    "        super().__init__(name, weight)\n",
+    "        self"
    ]
   },
   {
