--- a/index.ipynb
+++ b/index.ipynb
@@ -129,7 +129,9 @@
     "class Tiger(Animal):\n",
     "    def __init__(self, name, weight):\n",
     "        super().__init__(name, weight)\n",
-    "        self"
+    "        self.size = 'large'\n",
+    "        self.species = 'tiger'\n",
+    "        "
    ]
   },
   {
