--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,8 @@
     "        super().__init__(name, weight)\n",
     "        self.size = 'large'\n",
     "        self.species = 'tiger'\n",
-    "        "
+    "        self.foodtype = 'carnivore'\n",
+    "        self.noncr"
    ]
   },
   {
