Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
     "        self.size = 'large'\n",
     "        self.species = 'tiger'\n",
     "        self.foodtype = 'carnivore'\n",
-    "        self.noncr"
+    "        self.nocturnal = True"
    ]
   },
   {
