Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,8 @@
    "outputs": [],
    "source": [
     "class Raccoon(Animal):\n",
-    "    def __init__"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(nzme,)"
    ]
   },
   {
