Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,9 @@
    "source": [
     "class Raccoon(Animal):\n",
     "    def __init__(self, name, weight):\n",
-    "        super().__init__(nzme,)"
+    "        super().__init__(name, weight)\n",
+    "        self.size = 'small'\n",
+    "        self."
    ]
   },
   {
