Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,6 +158,7 @@
     "    def __init__(self, name, weight):\n",
     "        super().__init__(name, weight)\n",
     "        self.size = 'small'\n",
+    "        self.species = 'raccoon'\n",
     "        self."
    ]
   },
