--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,8 @@
     "        super().__init__(name, weight)\n",
     "        self.size = 'small'\n",
     "        self.species = 'raccoon'\n",
-    "        self."
+    "        self.foodtype = 'omnivore'\n",
+    "        sel"
    ]
   },
   {
