Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,7 +160,7 @@
     "        self.size = 'small'\n",
     "        self.species = 'raccoon'\n",
     "        self.foodtype = 'omnivore'\n",
-    "        sel"
+    "        self.nocturnal "
    ]
   },
   {
