--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,8 @@
     "        self.size = 'small'\n",
     "        self.species = 'raccoon'\n",
     "        self.foodtype = 'omnivore'\n",
-    "        self.nocturnal "
+    "        self.nocturnal = False\n",
+    "        "
    ]
   },
   {
@@ -183,7 +184,7 @@
    "outputs": [],
    "source": [
     "class Gorilla(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight)"
    ]
   },
   {
