Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -184,7 +184,9 @@
    "outputs": [],
    "source": [
     "class Gorilla(Animal):\n",
-    "    def __init__(self, name, weight)"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        "
    ]
   },
   {
