--- a/index.ipynb
+++ b/index.ipynb
@@ -186,7 +186,8 @@
     "class Gorilla(Animal):\n",
     "    def __init__(self, name, weight):\n",
     "        super().__init__(name, weight)\n",
-    "        "
+    "        self.size = 'large'\n",
+    "        self-"
    ]
   },
   {
