--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,8 @@
     "    def __init__(self, name, weight):\n",
     "        super().__init__(name, weight)\n",
     "        self.size = 'large'\n",
-    "        self-"
+    "        self_species = 'gorilla'\n",
+    "        self_foo"
    ]
   },
   {
