Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,8 +187,9 @@
     "    def __init__(self, name, weight):\n",
     "        super().__init__(name, weight)\n",
     "        self.size = 'large'\n",
-    "        self_species = 'gorilla'\n",
-    "        self_foo"
+    "        selfspecies = 'gorilla'\n",
+    "        self.foodtype = 'herbivore'\n",
+    "        "
    ]
   },
   {
