Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,9 +187,9 @@
     "    def __init__(self, name, weight):\n",
     "        super().__init__(name, weight)\n",
     "        self.size = 'large'\n",
-    "        selfspecies = 'gorilla'\n",
+    "        self.species = 'gorilla'\n",
     "        self.foodtype = 'herbivore'\n",
-    "        "
+    "        self.nocturnal = False"
    ]
   },
   {
