--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    "outputs": [],
    "source": [
     "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
-    "    "
+    "    if animal_type == 'Corilla'"
    ]
   },
   {
