--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,8 @@
    "outputs": [],
    "source": [
     "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
-    "    if animal_type == 'Corilla'"
+    "    if animal_type == 'Corilla':\n",
+    "        new_gorilla "
    ]
   },
   {
