--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,8 @@
    "source": [
     "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
     "    if animal_type == 'Corilla':\n",
-    "        new_gorilla "
+    "        new_gorilla = Gorilla(name, weight)\n",
+    "    if "
    ]
   },
   {
