--- a/index.ipynb
+++ b/index.ipynb
@@ -222,8 +222,9 @@
    "outputs": [],
    "source": [
     "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
+    "    ani\n",
     "    if animal_type == 'Corilla':\n",
-    "        new_gorilla = Gorilla(name, weight)\n",
+    "        animal = Gorilla(name, weight)\n",
     "    if "
    ]
   },
