Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,10 +222,10 @@
    "outputs": [],
    "source": [
     "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
-    "    ani\n",
+    "    animal = None\n",
     "    if animal_type == 'Corilla':\n",
     "        animal = Gorilla(name, weight)\n",
-    "    if "
+    "    if\n"
    ]
   },
   {
