--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "    animal = None\n",
     "    if animal_type == 'Corilla':\n",
     "        animal = Gorilla(name, weight)\n",
-    "    if\n",
+    "    if animal_type == 'Rac'\n",
     "zoo.append(animal)\n",
     "return(zoo)"
    ]
