Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,8 @@
     "    animal = None\n",
     "    if animal_type == 'Corilla':\n",
     "        animal = Gorilla(name, weight)\n",
-    "    if animal_type == 'Rac'\n",
+    "    if animal_type == 'Raccoon':\n",
+    "        animal = R\n",
     "zoo.append(animal)\n",
     "return(zoo)"
    ]
