--- a/index.ipynb
+++ b/index.ipynb
@@ -217,23 +217,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'zoo' is not defined",
+     "ename": "SyntaxError",
+     "evalue": "non-default argument follows default argument (<ipython-input-7-6fbef215dc2c>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-2138a01b3baa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0manimal_type\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Raccoon'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0manimal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRaccoon\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mzoo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manimal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mreturn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzoo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'zoo' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-6fbef215dc2c>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def add_animal_to_zoo(zoo = [], animal_type, name, weight):\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-default argument follows default argument\n"
      ]
     }
    ],
    "source": [
-    "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
+    "def add_animal_to_zoo(zoo = [], animal_type, name, weight):\n",
     "    animal = None\n",
     "    if animal_type == 'Corilla':\n",
     "        animal = Gorilla(name, weight)\n",
