--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
     }
    ],
    "source": [
-    "def add_animal_to_zoo(zoo = [], animal_type, name, weight):\n",
+    "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
     "    animal = None\n",
     "    if animal_type == 'Corilla':\n",
     "        animal = Gorilla(name, weight)\n",
