--- a/index.ipynb
+++ b/index.ipynb
@@ -236,6 +236,7 @@
     "        animal = Gorilla(name, weight)\n",
     "    if animal_type == 'Raccoon':\n",
     "        animal = Raccoon(name, weight)\n",
+    "    if animal_tyo\n",
     "zoo.append(animal)\n",
     "return(zoo)"
    ]
