Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,8 @@
     "        animal = Gorilla(name, weight)\n",
     "    if animal_type == 'Raccoon':\n",
     "        animal = Raccoon(name, weight)\n",
-    "    if animal_tyo\n",
+    "    if animal_type == 'Tiger':\n",
+    "        animal \n",
     "zoo.append(animal)\n",
     "return(zoo)"
    ]
