--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,9 @@
     "    if animal_type == 'Raccoon':\n",
     "        animal = Raccoon(name, weight)\n",
     "    if animal_type == 'Tiger':\n",
-    "        animal \n",
+    "        animal = Tiger(name, weight)\n",
+    "    else:\n",
+    "        animal\n",
     "zoo.append(animal)\n",
     "return(zoo)"
    ]
