--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create your animals and add them to the 'zoo' in this cell!"
+    "# Create your animals and add them to the 'zoo' in this cell!\n",
+    "to_create = "
    ]
   },
   {
