Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -257,7 +257,8 @@
    "outputs": [],
    "source": [
     "# Create your animals and add them to the 'zoo' in this cell!\n",
-    "to_create = ['Elephant', 'Elephant', 'Raccoon', 'Raccoon', 'Gorilla', 'Tiger', 'Tiger', 'Tiger']"
+    "to_create = ['Elephant', 'Elephant', 'Raccoon', 'Raccoon', 'Gorilla', 'Tiger', \"Tiger', 'Tiger]\n",
+    "             "
    ]
   },
   {
