--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,10 @@
    "outputs": [],
    "source": [
     "# Create your animals and add them to the 'zoo' in this cell!\n",
-    "to_create = ['Elephant', 'Elephant', 'Raccoon', 'Raccoon', 'Gorilla', 'Tiger', 'Tiger', 'Tiger']"
+    "to_create = ['Elephant', 'Elephant', 'Raccoon', 'Raccoon', 'Gorilla', 'Tiger', 'Tiger', 'Tiger']\n",
+    "zoo = []\n",
+    "\n",
+    "add_animal_to_zoo(zoo)"
    ]
   },
   {
