Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -259,8 +259,8 @@
     "# Create your animals and add them to the 'zoo' in this cell!\n",
     "to_create = ['Elephant', 'Elephant', 'Raccoon', 'Raccoon', 'Gorilla', 'Tiger', 'Tiger', 'Tiger']\n",
     "zoo = []\n",
-    "\n",
-    "add_animal_to_zoo(zoo)"
+    "for i in range(len(to))\n",
+    "add_animal_to_zoo(zoo, )"
    ]
   },
   {
