Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -260,7 +260,7 @@
     "to_create = ['Elephant', 'Elephant', 'Raccoon', 'Raccoon', 'Gorilla', 'Tiger', 'Tiger', 'Tiger']\n",
     "zoo = []\n",
     "for i in range(len(to_create)):\n",
-    "    zoo = add_animal_to_zoo(zoo, )"
+    "    zoo = add_animal_to_zoo(zoo, i, 'name', 100)"
    ]
   },
   {
