Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -274,7 +274,9 @@
     "to_create = ['Elephant', 'Elephant', 'Raccoon', 'Raccoon', 'Gorilla', 'Tiger', 'Tiger', 'Tiger']\n",
     "zoo = []\n",
     "for i in to_create:\n",
-    "    zoo = add_animal_to_zoo(zoo, i, 'name', 100)"
+    "    zoo = add_animal_to_zoo(zoo, i, 'name', 100)\n",
+    "return zoo\n",
+    "\n"
    ]
   },
   {
