Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -104,7 +104,9 @@
     "        self.size = 'enormous'\n",
     "        self.species = 'elephant'\n",
     "        self.foodtype = 'herbivore'\n",
-    "        self.nocturnal = False "
+    "        self.nocturnal = False \n",
+    "        \n",
+    "        \n"
    ]
   },
   {
