Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -94,19 +94,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# class Elephant(Animal):\n",
+    "#     def __init__(self, name, weight):\n",
+    "#         super().__init__(name, weight)\n",
+    "#         self.size = 'enormous'\n",
+    "#         self.species = 'elephant'\n",
+    "#         self.foodtype = 'herbivore'\n",
+    "#         self.nocturnal = False \n",
+    "        \n",
+    "        \n",
     "class Elephant(Animal):\n",
+    "    \n",
     "    def __init__(self, name, weight):\n",
     "        super().__init__(name, weight)\n",
     "        self.size = 'enormous'\n",
     "        self.species = 'elephant'\n",
-    "        self.foodtype = 'herbivore'\n",
-    "        self.nocturnal = False \n",
-    "        \n",
-    "        \n"
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False"
    ]
   },
   {
