--- a/index.ipynb
+++ b/index.ipynb
@@ -316,7 +316,8 @@
    "outputs": [],
    "source": [
     "def feed_animals(zoo, time='Day'):\n",
-    "    if time"
+    "    if time == 'Day':\n",
+    "        "
    ]
   },
   {
