Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,7 @@
    "source": [
     "def feed_animals(zoo, time='Day'):\n",
     "    if time == 'Day':\n",
-    "        "
+    "        zoo.f"
    ]
   },
   {
