Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -316,8 +316,8 @@
    "outputs": [],
    "source": [
     "def feed_animals(zoo, time='Day'):\n",
-    "    if time == 'Day':\n",
-    "        zoo.f"
+    "    for animal in zoo:\n",
+    "        if time == \"\""
    ]
   },
   {
