Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,8 @@
    "source": [
     "def feed_animals(zoo, time='Day'):\n",
     "    for animal in zoo:\n",
-    "        if time == \"\""
+    "        if time == \"Day\":\n",
+    "            if animal.n"
    ]
   },
   {
