Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,8 @@
     "def feed_animals(zoo, time='Day'):\n",
     "    for animal in zoo:\n",
     "        if time == \"Day\":\n",
-    "            if animal.n"
+    "            if animal.nocturnal == False:\n",
+    "                if "
    ]
   },
   {
