Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
     "    for animal in zoo:\n",
     "        if time == \"Day\":\n",
     "            if animal.nocturnal == False:\n",
-    "                if "
+    "                if animal.foodtype == "
    ]
   },
   {
