Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -141,14 +141,7 @@
     "        super().__init__(name, weight)\n",
     "        self.size = 'large'\n",
     "        self.species = 'tiger'\n",
-    "        self.foodtype = 'class Elephant(Animal):\n",
-    "    \n",
-    "    def __init__(self, name, weight):\n",
-    "        super().__init__(name, weight)\n",
-    "        self.size = 'enormous'\n",
-    "        self.species = 'elephant'\n",
-    "        self.food_type = 'herbivore'\n",
-    "        self.nocturnal = False'\n",
+    "        self.foodtype = 'carnivore'\n",
     "        self.nocturnal = True"
    ]
   },
