Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,9 @@
     "        if time == \"Day\":\n",
     "            if animal.nocturnal == False:\n",
     "                if animal.foodtype == 'carnivore':\n",
-    "                    animal.eat('meat')"
+    "                    animal.eat('meat')\n",
+    "                else:\n",
+    "                    a"
    ]
   },
   {
