Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,8 @@
     "                if animal.foodtype == 'carnivore':\n",
     "                    animal.eat('meat')\n",
     "                else:\n",
-    "                    a"
+    "                    animal.eat('plants')\n",
+    "            if animal.foodtype"
    ]
   },
   {
