Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,8 @@
     "                    animal.eat('meat')\n",
     "                else:\n",
     "                    animal.eat('plants')\n",
-    "        else time ==\"\""
+    "        else:\n",
+    "            if animal"
    ]
   },
   {
