--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,8 @@
     "                else:\n",
     "                    animal.eat('plants')\n",
     "        else:\n",
-    "            if animal"
+    "            if animal.nocturnal == True:\n",
+    "                "
    ]
   },
   {
