Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +325,10 @@
     "                    animal.eat('plants')\n",
     "        else:\n",
     "            if animal.nocturnal == True:\n",
+    "                if animal.foodtype == 'carnivore':\n",
+    "                    animal.eat('meat')\n",
+    "                else:\n",
+    "                    animal.eat('plants')\n",
     "                "
    ]
   },
