Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -341,10 +341,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I don't eat this\n",
+      "I don't eat this\n",
+      "I don't eat this\n",
+      "I don't eat this\n",
+      "I don't eat this\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo, 'Day')"
+   ]
   },
   {
    "cell_type": "markdown",
