Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -341,23 +341,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I don't eat this\n",
-      "I don't eat this\n",
-      "I don't eat this\n",
-      "I don't eat this\n",
-      "I don't eat this\n"
+      "name, the tiger, thinks meat is Yammy\n",
+      "name, the tiger, thinks meat is Yammy\n",
+      "name, the tiger, thinks meat is Yammy\n"
      ]
     }
    ],
    "source": [
-    "feed_animals(zoo, 'Day')"
+    "feed_animals(zoo, 'Night')"
    ]
   },
   {
